--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -35,6 +35,7 @@
 }
 
 .btn-cart {
+	color: #000000;
 	width: 100%;
 	bottom: 0;
 	position: absolute;
@@ -45,4 +46,8 @@
 
 .btn-cart:hover {
 	background-color: #ff9900;
+}
+
+.btn-cart:focus {
+	outline: none;
 }
