--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,9 @@
 .header {
+	top: 0;
 	height: 80px;
 	display: flex;
+	z-index: 1;
+	position: sticky;
 	padding: 0 100px;
 	align-items: center;
 	background-color: #1c2b35;
